# flappy-bird

./: .gitignore  CMakeLists.txt  README.md
src/Core/: MainWindow.cpp  MainWindow.h
src/Game/: Constants.h  CoreEntities.h  GameEngine.cpp  GameEngine.h  GameWidget.cpp  GameWidget.h  PipeEntity.h
src/NN/: NeuralNetwork.h
